syntax = "proto3";

package tests;

message Request {
    string message = 1;
}
message Reply {
    string message = 1;
}
service DoesNotExistsService {
    rpc Procedure (Request) returns (Reply) {}
}
service TestService {
    rpc DoesNotExistsProcedure (Request) returns (Reply) {}
    rpc ExistsProcedure (Request) returns (Reply) {}
    rpc ErrorWhileCallProcedure (Request) returns (Reply) {}
}
